--- a/server/.env.example
+++ b/server/.env.example
@@ -9,12 +9,27 @@ DB_NAME=transparatech_db
 DB_USER=your_username
 DB_PASSWORD=your_password
 
-# JWT Configuration
-JWT_SECRET=your_jwt_secret_key_here
+# JWT Configuration - CRITICAL SECURITY SETTINGS
+# JWT_SECRET must be at least 32 characters long and cryptographically secure
+# Generate with: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+# NEVER use default values like 'secret', 'test-secret', or 'your_jwt_secret_key_here'
+JWT_SECRET=your_secure_jwt_secret_at_least_32_characters_long_generated_randomly
 JWT_EXPIRE=7d
+JWT_REFRESH_EXPIRE=30d
+JWT_ISSUER=transparatech
+JWT_AUDIENCE=transparatech-users
 
-# CORS Configuration
+# CORS Configuration - CRITICAL SECURITY SETTINGS
+# CLIENT_URL: Comma-separated list of allowed frontend origins
+# Production: MUST use HTTPS and NO localhost URLs
+# Development: Can include localhost for testing
+# Examples:
+#   Production: CLIENT_URL=https://transparatech.pup.edu.ph,https://admin.transparatech.pup.edu.ph
+#   Development: CLIENT_URL=http://localhost:5173,http://localhost:3000
 CLIENT_URL=http://localhost:5173
+
+# Alternative CORS configuration (if using multiple origins)
+# CORS_ORIGINS=http://localhost:5173,http://localhost:3000
 
 # API Configuration
 API_PREFIX=/api/v1
